# termux-tools

./: .gitignore  .startpage.sh  .writer.sh  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  T-setup.sh  ai-bot.py  ai-dashboard.sh  ai-hub.sh  auto-update.sh  dashboard.py  download-models.sh  install-everything.sh  install.sh  launcher.sh  matrix-rain.py  phone-tune.sh  quickref.sh  speed-boost.sh  system-tune.sh  termux_cli_manager.py  update.sh
tools/termux-app-store/: .codecov.yml  ARCHITECTURE.md  BINARY_DISCLAIMER.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  FAQ.md  GOVERNANCE.md  HOW_TO_UPLOAD.md  INSTALL.md  LICENSE  MANIFEST.in  PRIVACY.md  README.md  SECURITY.md  SUPPORT.md  TROUBLESHOOTING.md  build-package.sh  install.sh  pyproject.toml  pytest.ini  tasctl  termux-build  uninstall.sh
tools/termux-app-store/.circleci/: config.yml
tools/termux-app-store/.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  renovate.json
tools/termux-app-store/.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  (+5 more)
tools/termux-app-store/ci/: run_cli.py  run_tasctl.py  run_termux_build.py
tools/termux-app-store/template/: build.sh
tools/termux-app-store/termux_app_store/: __init__.py  main.py  termux_app_store.py  termux_app_store_cli.py
tools/termux-app-store/tests/: conftest.py  test_build.py  test_cli.py  test_conftest_helpers.py  test_package.py  test_tools.py  test_version.py
tools/termux-app-store/tools/: build.py  colors.sh  index.json  package_manager.py  termux-build-check-pr.sh  termux-build-create.sh  termux-build-doctor.sh  termux-build-explain.sh  termux-build-guide.sh  termux-build-init.sh  termux-build-lint.sh  termux-build-suggest.sh  termux-build-template.sh  validate-build.sh
(+114 files in other folders)
